# pyupgradecheck

./: .gitignore  README.md  pyproject.toml  test_requirements.txt  test_requirements_README.md
.github/workflows/: ci.yml
pyupgradecheck/: __init__.py  checker.py  cli.py
tests/: test_basic.py
