[build-system]
requires = ["setuptools>=61.0", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name = "pyupgradecheck"
version = "0.1.6"
description = "Check your installed Python packages for version compatibility"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Tammy DiPrima", email = "tdiprima@yahoo.com"}]
license = "MIT"
dependencies = [
  "packaging",
  "halo",
  "httpx"
]
keywords = ["python", "compatibility", "pypi", "upgrade", "cli", "dependency"]
classifiers = [
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Programming Language :: Python :: 3",
  "Intended Audience :: Developers",
  "Environment :: Console"
]
[project.scripts]
pyupgradecheck = "pyupgradecheck.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
